# OOP_lab_1_4

./: CMakeLists.txt  Stack.h  Stack.inl  Train.cpp  Train.h  main.cpp
Google_tests/: CMakeLists.txt  test.cpp
